--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Chetan Verma</h1>
+        <h1>Chetan </h1>
         <p class="contact-info">
             <br>
             Dibai, Bulandshahr (UP), 202393 | +917906791977 | <a href="mailto:ck193229@gmail.com">ck193229@gmail.com</a><br>
